pointcuts red->green